--- a/index.html
+++ b/index.html
@@ -243,6 +243,13 @@
               </div>
 
               <div class="form-group">
+                <label class="control-label col-sm-2" for="itinerary">Itinerary</label>
+                <div class="col-sm-8">
+                  <textarea class="form-control" rows="8" id="itinerary"></textarea>
+                </div>
+              </div>
+
+              <div class="form-group">
                 <div class=" col-sm-offset-2 col-sm-8">
                   <button type="button" class="btn pull-right post-btn">Post</button>
                   <button type="button" class="btn pull-right preview-btn">Preview</button> 
