--- a/index.html
+++ b/index.html
@@ -448,6 +448,13 @@
                                     <textarea class="form-control" rows="5" id="description"></textarea>
                                   </div>
                                 </div>
+
+                                <div class="form-group">
+                                  <label class="control-label col-sm-3" for="itinerary">Itinerary</label>
+                                  <div class="col-sm-8">
+                                    <textarea class="form-control" rows="8" id="itinerary"></textarea>
+                                  </div>
+                                </div>
                               </form>
                             
 
