--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                            </tr>
                            <tr>
                                <td>3</td>
-                               <td>Sagar Hoda</td>
+                               <td>Ashutosh Shrestha</td>
                                <td>9866587458</td>
-                               <td>sagar.hoda08@gmail.com</td>
+                               <td>ashu.stha08@gmail.com</td>
                                <td>Trekking</td>
                                <td>
                                    <button class="btn btn-danger">Delete</button>
